--- a/webpackDemo/public/index.html
+++ b/webpackDemo/public/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>hello webpack</h1>
-    <script src="../src/main.js"></script>
+    <div class="box">1111</div>
+    <div class="box2">1111</div>
+    <div class="box3">1111</div>
+    <div class="box4">1111</div>
+    <div class="box5">1111</div>
+    <script src="../dist/main.js"></script>
 </body>
 </html>
