--- a/webpackDemo/public/index.html
+++ b/webpackDemo/public/index.html
@@ -12,6 +12,6 @@
     <div class="box3">1111</div>
     <div class="box4">1111</div>
     <div class="box5">1111</div>
-    <script src="../dist/main.js"></script>
+    <script src="../dist/static/js/main.js"></script>
 </body>
 </html>
