--- a/webpackDemo/public/index.html
+++ b/webpackDemo/public/index.html
@@ -12,6 +12,10 @@
     <div class="box3">1111</div>
     <div class="box4">1111</div>
     <div class="box5">1111</div>
+    <span class="iconfont icon-aixin">111</span>
+    <span class="iconfont icon-bianji">111</span>
+    <span class="iconfont icon-caidan">111</span>
+    <span class="iconfont icon-Dyanjing">111</span>
     <script src="../dist/static/js/main.js"></script>
 </body>
 </html>
