--- a/webpackDemo/public/index.html
+++ b/webpackDemo/public/index.html
@@ -16,6 +16,6 @@
     <span class="iconfont icon-bianji">111</span>
     <span class="iconfont icon-caidan">111</span>
     <span class="iconfont icon-Dyanjing">111</span>
-    <script src="../dist/static/js/main.js"></script>
+    <!-- <script src="../dist/static/js/main.js"></script> -->
 </body>
 </html>
