--- a/webpackDemo/public/index.html
+++ b/webpackDemo/public/index.html
@@ -16,6 +16,7 @@
     <span class="iconfont icon-bianji">111</span>
     <span class="iconfont icon-caidan">111</span>
     <span class="iconfont icon-Dyanjing">111</span>
+    <button id="btn">按钮</button>
     <!-- <script src="../dist/static/js/main.js"></script> -->
 </body>
 </html>
