--- a/cssDemo/CSS3/04_CSS3_新增盒子模型相关属性/03_box-shadow.html
+++ b/cssDemo/CSS3/04_CSS3_新增盒子模型相关属性/03_box-shadow.html
@@ -28,7 +28,7 @@
             /* box-shadow: -10px -10px 20px 10px blue; */
 
             /* 写六个值，含义：水平位置 垂直位置 模糊程度 外延值 阴影颜色 内阴影 */
-            /* box-shadow: 10px 10px 20px 10px blue inset; */
+            box-shadow: 10px 10px 20px  blue;
 
             position: relative;
             top: 0;
