--- a/cssDemo/CSS3/05_CSS3_新增背景相关属性/02_background-clip.html
+++ b/cssDemo/CSS3/05_CSS3_新增背景相关属性/02_background-clip.html
@@ -18,7 +18,8 @@
             background-image: url('../images/bg02.jpg');
             background-repeat: no-repeat;
             background-origin: border-box;
-            -webkit-background-clip: text;
+            /* -webkit-background-clip: text; */
+            background-clip: content-box;
         }
     </style>
 </head>
