--- a/cssDemo/CSS3/06_CSS3_新增边框相关属性/02_边框外轮廓.html
+++ b/cssDemo/CSS3/06_CSS3_新增边框相关属性/02_边框外轮廓.html
@@ -17,7 +17,7 @@
             /* outline-width: 20px; */
             /* outline-color: orange; */
             /* outline-style: solid; */
-            outline-offset: 30px;
+            /* outline-offset: 30px; */
 
             outline:20px solid orange;
 
