--- a/cssDemo/CSS3/07_CSS3_新增文本属性/04_文本修饰.html
+++ b/cssDemo/CSS3/07_CSS3_新增文本属性/04_文本修饰.html
@@ -9,7 +9,7 @@
             /* text-decoration-line: overline; */
             /* text-decoration-style: dashed; */
             /* text-decoration-color: blue; */
-            /* text-decoration: overline wavy blue; */
+            text-decoration: overline wavy blue;
         }
     </style>
 </head>
