--- a/cssDemo/CSS3/01_CSS3_新增长度单位/新增长度单位.html
+++ b/cssDemo/CSS3/01_CSS3_新增长度单位/新增长度单位.html
@@ -6,7 +6,7 @@
     <style>
         * {
             margin: 0;
-            padding: 10;
+            padding: 10px;
         }
         .box1 {
             width: 200px;
@@ -23,11 +23,17 @@
             height: 20vmin;
             background-color: orange;
         }
+        #div1 {
+            width: 10px;
+            height: 10px;
+            background-color: red;
+        }
     </style>
 </head>
 <body>
     <div class="box1">像素</div>
     <div class="box2">vw和vh</div>
     <div class="box3">vmax</div>
+    <div id="div1">1111</div>
 </body>
 </html>
