--- a/cssDemo/CSS3/04_CSS3_新增盒子模型相关属性/01_box-sizing.html
+++ b/cssDemo/CSS3/04_CSS3_新增盒子模型相关属性/01_box-sizing.html
@@ -17,7 +17,7 @@
             height: 200px;
             background-color: gray;
             padding: 5px;
-            border: 5px solid black;
+            border: 5px solid red;
             box-sizing: border-box;
         }
     </style>
