--- a/cssDemo/CSS3/05_CSS3_新增背景相关属性/03_background-size.html
+++ b/cssDemo/CSS3/05_CSS3_新增背景相关属性/03_background-size.html
@@ -9,17 +9,16 @@
             height: 400px;
             padding: 50px;
             border: 50px dashed rgba(255, 0, 0, 0.7);
-            /* background-image: url('../images/bg03.jpg'); */
-            /* background-repeat: no-repeat; */
+            background-image: url('../images/bg03.jpg');
+            background-repeat: no-repeat;
 
-            /* background-size: 400px 400px; */
+            background-size: 400px 400px;
             /* background-size: 100% 100%; */
-            /* background-size: contain; */
-            background-size: cover;
+            background-size: contain;
+            /* background-size: cover; */
         }
     </style>
 </head>
 <body>
-    <div></div>
 </body>
 </html>
