--- a/cssDemo/CSS3/10_2D_变换/01_位移.html
+++ b/cssDemo/CSS3/10_2D_变换/01_位移.html
@@ -23,7 +23,7 @@
             /* transform: translateY(50px); */
 
             /* 水平+垂直位移 */
-            /* transform: translate(50px,50px); */
+            transform: translate(50px,50px);
         }
 
         .inner2 {
@@ -33,7 +33,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%,-50%);
+            /* transform: translate(-50%,-50%); */
         }
     </style>
 </head>
