--- a/cssDemo/CSS3/10_2D_变换/06_变换原点.html
+++ b/cssDemo/CSS3/10_2D_变换/06_变换原点.html
@@ -16,7 +16,7 @@
             height: 200px;
             background-color: deepskyblue;
             /* 通过关键词调整变换原点 */
-            /* transform-origin: right bottom; */
+            transform-origin: right bottom;
 
             /* 通过具体像素值调整变换原点 */
             /* transform-origin: 50px 50px; */
@@ -30,7 +30,7 @@
             /* transform-origin: right top; */
 
             /* 变换原点位置的改变对 旋转 有影响 */
-            /* transform: rotate(0deg); */
+            transform: rotate(20deg);
 
             /* 变换原点位置的改变对 缩放 有影响 */
             /* transform: scale(1.3); */
