--- a/cssDemo/18_定位/01_相对定位.html
+++ b/cssDemo/18_定位/01_相对定位.html
@@ -23,14 +23,13 @@
             position: relative;
             top: 10px;
             left: 10px;
-            /* left: 100px; */
-            /* margin-left: 50px; */
+            margin: 50px;
             /* float: right; */
         }
         .box3 {
             background-color: green;
-            /* position: relative; */
-            /* top: -50px; */
+            /* position: relative;
+            top: -50px; */
         }
     </style>
 </head>
