--- a/threeDemo/public/index.html
+++ b/threeDemo/public/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>three api test</title>
     <style>
-        body {
+        #view {
             height: 100%;
             width: 100%;
             margin: 0;
             overflow: hidden;
         }
+        body {
+            margin: 0;
+        }
     </style>
 </head>
 <body>
-    
+    <div id="view"></div>
 </body>
 </html>
